examples/datalog/32_math/07_floor_ceil.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_floor_ceil
Knowledge graph 'test_floor_ceil' created.
Switched to knowledge graph: test_floor_ceil
> .kg use test_floor_ceil
Switched to knowledge graph: test_floor_ceil
> +nums[(1.2,), (1.8,), (2.5,), (-1.3,), (-1.7,)].
Inserted 5 fact(s) into 'nums'.
> floor_val(X, Y) :- nums(X), Y = FLOOR(X).
Script error: Parse error: Invalid term: 'FLOOR(X)'
