examples/datalog/32_math/07_floor_ceil.dl
% Test: Floor and ceil functions
% Expected: Return floor/ceil values
% Category: 32_math
% Priority: P2 - Math functions

.kg create test_floor_ceil
.kg use test_floor_ceil

+nums[(1.2,), (1.8,), (2.5,), (-1.3,), (-1.7,)].

floor_val(X, Y) :- nums(X), Y = FLOOR(X).
ceil_val(X, Y) :- nums(X), Y = CEIL(X).

?- floor_val(X, Y).
?- ceil_val(X, Y).

.kg use default
.kg drop test_floor_ceil
